DONE RELOADED. Forgot to update the summary.

--- a/thesis/abstract_de.ltx
+++ b/thesis/abstract_de.ltx
@@ -1,5 +1,6 @@
 Wissensdatenbanken, wie DBpedia, YAGO und Wikidata, speichern Informationen über nennenswerten Entitäten und deren Beziehungen zueinander.
-Eine Ontologie definiert Datenschemata, Vokabulare, Hierarchien, sowie Regeln über die Gültigkeit und Herleitbarkeit von Informationen.
+Eine Wissensdatenbank kann als Instanziierung einer Ontologie bezeichnet werden.
+Eine Ontologie ist eine formale Spezifikation von Wissen und besteht aus Konzepten, Relationen, und Axiomen zur Validation.
 Dadurch wird das Modellieren, das Teilen und der Austausch von Informationen, sowie das Herleiten neues Wissens ,
 ermöglicht
 Die Taxonomie, auch Konzept- oder Klassenhierarchie genannt, ist ein grundlegender Bestandteil einer Ontologie.
