--- a/thesis/abstract_en.ltx
+++ b/thesis/abstract_en.ltx
@@ -1,5 +1,6 @@
 Knowledge bases, such as DBpedia, YAGO, and Wikidata, store information about notable entities and their relationships.
-An ontology defines data schemas, vocabularies, hierarchies, and rules about the validity and derivability of information.
+A knowledge bases can be considered an instantiation of an ontology.
+An ontology  is a formal specification of knowledge consisting of concepts, relations and axioms for validation.
 The ontology enables the modeling, sharing and exchange of information, as well as the derivation of new knowledge.
 The taxonomy, also called concept or class hierarchy, is a fundamental component of an ontology.
 In a taxonomy, classes are arranged hierarchically linked by a subclass-of relation.
